--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+    height: 100%;
   }
   a:hover {
     color: #747bff;
