--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,12 @@
 body {
   margin: 0;
   display: flex;
-  flex-direction: column;
-  display: block; /* Change from flex to block layout for normal flow */
+  place-items: center;
   padding-top: 56px; /* Adjust based on your navbar height */
   min-width: 320px;
   min-height: 100vh;
   background-color: rgb(8, 49, 8);
-  color: white;
+
 }
 
 .main-container {
@@ -35,6 +34,8 @@ body {
   width: 100%;
   height: calc(100vh - 56px);
 }
+
+
 
 #b{
   background-color: #5a805d;
