--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body {
+  overflow: auto; /* Ensure scrolling is allowed */
+  height: 100%;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -22,6 +27,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: rgb(8, 49, 8);
+  overflow-y: scroll;
 
 }
 
