--- a/src/register/Register.css
+++ b/src/register/Register.css
@@ -1,70 +1,25 @@
-/* Sørger for at siden har en fleksibel layout */
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh; /* Full høyde for å inkludere skjermens høyde */
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.register-container {
-  position: relative;
-  margin: 30px auto; /* Sentraliserer boksen og legger til topp-margin */
-  padding: 30px;
-  width: 100%;
-  max-width: 400px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 10; /* Sørger for at skjemaet ligger foran andre elementer */
+.container.text-center {
+  color: #000 !important;
 }
 
 
-footer {
-  margin-top: auto; /* Plasserer footeren nederst */
-  padding: 20px;
-  background-color: #333;
-  color: white;
-  text-align: center;
-}
-
-/* Justeringer for skjemaet */
-.register-form {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.register-form h1 {
-  text-align: center;
+img {
   margin-bottom: 20px;
-  font-size: 1.5rem;
 }
 
-.register-form input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+.form-floating input {
   font-size: 1rem;
 }
 
-.register-form input:focus {
-  outline: none;
-  border-color: #007bff;
+.form-floating label {
+  font-size: 0.9rem;
+  padding-left: 10px;
 }
 
-.register-form button {
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-.register-form button:hover {
+button:hover {
   background-color: #0056b3;
+}
+
+a {
+  font-size: 0.9rem;
 }
