--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,72 @@
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
+#root {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.main-content {
+  flex: 1; /* Push the footer down by taking available space */
+} /*kommentar */
+
+html, body {
+  overflow: auto;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  min-width: 320px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  padding-top: 56px; 
+  min-width: 100vw;
+  min-height: 100vh;
+  background-color: rgb(8, 49, 8);
+  overflow-y: scroll;
+
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 10%;
+  width: 100%;
+  height: calc(100vh - 56px);
+}
+
+#b{
+  background-color: #5a805d;
+}
+
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+    height: 100%;
   }
 }
