--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,72 +1,71 @@
-
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 #root {
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-content {
-  flex: 1; /* Push the footer down by taking available space */
+    flex: 1; /* Push the footer down by taking available space */
 } /*kommentar */
 
-html, body {
-  overflow: auto;
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  min-width: 320px;
+html,
+body {
+    overflow: auto;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    min-width: 320px;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  padding-top: 56px; 
-  min-width: 100vw;
-  min-height: 100vh;
-  background-color: rgb(8, 49, 8);
-  overflow-y: scroll;
-
+    margin: 0;
+    display: flex;
+    place-items: center;
+    padding-top: 56px;
+    min-width: 100vw;
+    min-height: 100vh;
+    background-color: rgb(8, 49, 8);
+    overflow-y: scroll;
+    flex-direction: column;
 }
 
 .main-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding-top: 10%;
-  width: 100%;
-  height: calc(100vh - 56px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 10%;
+    width: 100%;
+    height: calc(100vh - 56px);
 }
 
-#b{
-  background-color: #5a805d;
+#b {
+    background-color: #5a805d;
 }
-
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-    height: 100%;
-  }
+    :root {
+        color: #213547;
+        background-color: #ffffff;
+        height: 100%;
+    }
 }
