--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,39 @@
     font-weight: 400;
 
     color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    color: rgba(255, 255, 255, 0.87); /* Hvit tekstfarge for mørk bakgrunn */
+    background-color: #242424; /* Mørk bakgrunnsfarge */
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+    background-color: rgb(8, 49, 8); /* Bakgrunnsfarge på body */
+}
+
+body {
+    display: flex;
+    flex-direction: column; /* Organiser children vertikalt */
+    flex-grow: 1;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1; /* Tar opp all tilgjengelig plass */
+    padding-bottom: 2rem; /* Legg til luft under hovedinnholdet */
+}
+
+footer {
+    margin-top: auto; /* Sikrer at footeren alltid er nederst */
 }
 
 #root {
@@ -24,27 +50,6 @@
 
 .main-content {
     flex: 1; /* Push the footer down by taking available space */
-} /*kommentar */
-
-html,
-body {
-    overflow: auto;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    min-width: 320px;
-}
-
-body {
-    margin: 0;
-    display: flex;
-    flex-direction: column; /* Ensure the body takes full height and stretches */
-
-    min-width: 100vw;
-    min-height: 100vh;
-    background-color: rgb(8, 49, 8);
-    overflow-y: scroll;
 }
 
 .main-container {
@@ -58,13 +63,12 @@ body {
 }
 
 #b {
-    background-color: #5a805d;
+    background-color: #5a805d; /* Bakgrunnsfarge på element med id 'b' */
 }
 
 @media (prefers-color-scheme: light) {
     :root {
-        color: #213547;
-        background-color: #ffffff;
-        height: 100%;
+        color: #213547; /* Mørk tekstfarge for lys bakgrunn */
+        background-color: #ffffff; /* Lys bakgrunnsfarge */
     }
 }
