--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
     font-weight: 400;
 
     color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87); /* Hvit tekstfarge for mørk bakgrunn */
-    background-color: #242424; /* Mørk bakgrunnsfarge */
+    color: rgba(255, 255, 255, 0.87); 
+    background-color: #242424; 
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -20,23 +20,23 @@ body {
     margin: 0;
     padding: 0;
     overflow: auto;
-    background-color: rgb(8, 49, 8); /* Bakgrunnsfarge på body */
+    background-color: rgb(8, 49, 8); 
 }
 
 body {
     display: flex;
-    flex-direction: column; /* Organiser children vertikalt */
+    flex-direction: column; 
     flex-grow: 1;
     min-height: 100vh;
 }
 
 main {
-    flex: 1; /* Tar opp all tilgjengelig plass */
-    padding-bottom: 2rem; /* Legg til luft under hovedinnholdet */
+    flex: 1; 
+    padding-bottom: 2rem; 
 }
 
 footer {
-    margin-top: auto; /* Sikrer at footeren alltid er nederst */
+    margin-top: auto; 
 }
 
 #root {
@@ -49,7 +49,7 @@ footer {
 }
 
 .main-content {
-    flex: 1; /* Push the footer down by taking available space */
+    flex: 1; 
 }
 
 .main-container {
@@ -63,12 +63,12 @@ footer {
 }
 
 #b {
-    background-color: #5a805d; /* Bakgrunnsfarge på element med id 'b' */
+    background-color: #5a805d; 
 }
 
 @media (prefers-color-scheme: light) {
     :root {
-        color: #213547; /* Mørk tekstfarge for lys bakgrunn */
-        background-color: #ffffff; /* Lys bakgrunnsfarge */
+        color: #213547; 
+        background-color: #ffffff; 
     }
 }
